--- a/index.htm
+++ b/index.htm
@@ -1047,7 +1047,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/hamburg/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Hamburg</span>
+        <span itemprop="name">Hamburgensis</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/sport/index" class="navigation-link" itemprop="url">
