--- a/index.htm
+++ b/index.htm
@@ -1023,7 +1023,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/gesundheit/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Gesundheit</span>
+        <span itemprop="name">Gesundheitskosten</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/familie/index" class="navigation-link" itemprop="url">
