--- a/index.htm
+++ b/index.htm
@@ -979,7 +979,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/wirtschaft/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Wirtschaft</span>
+        <span itemprop="name">Wirtschaftsweisen</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/zeit-magazin/wochenmarkt/index" class="navigation-link" itemprop="url">
@@ -1003,7 +1003,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/kultur/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Kultur</span>
+        <span itemprop="name">Kultourismus</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/campus/index" class="navigation-link" itemprop="url">
