--- a/index.htm
+++ b/index.htm
@@ -975,7 +975,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/zeit-magazin/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">ZEITmagazin</span>
+        <span itemprop="name">ZEITmagazinum</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/wirtschaft/index" class="navigation-link" itemprop="url">
