--- a/index.htm
+++ b/index.htm
@@ -991,7 +991,7 @@
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/wochenende/index" class="navigation-link" itemprop="url">
-        <span itemprop="name">Wochenende</span>
+        <span itemprop="name">Wochenendewochentags</span>
 </a>                    </li>
                                                     <li>
                         <a href="https://www.zeit.de/gesellschaft/index" class="navigation-link" itemprop="url">
